# rg-15-flipper

./: Cargo.toml  README.md  rust-toolchain.toml
docs/: wiring.afdesign
src/: cmd.rs  main.rs
src/safe/: canvas.rs  gui.rs  mod.rs  serial_handle.rs  submenu.rs  view.rs  view_dispatcher.rs  widget.rs
