cargo-features = ["different-binary-name"]

[package]
name = "rg-15-flipper"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "rg-15-flipper"
filename = "rg-15-flipper.fap"
bench = false
test = false

[dependencies]
flipperzero = { version = "0.12.0" }
flipperzero-sys = { version = "0.12.0" }
flipperzero-rt = { version = "0.12.0" }
